=======
CHANGES
=======

3.6.1 (unreleased)
------------------

- When a module provides an interface or has an __all__ attribute,
  use one of those for the module documentation.  Fixes LP #323375.

- Undid broken link to `savepoint.txt` caused in 3.6.0.  The latest
  version of the transaction package puts savepoint.txt in the `tests`
  subpackage.

3.6.0 (2009-01-31)
------------------

- Use zope.container instead of zope.app.container.

- Use zope.site instead of zope.app.component and zope.app.folder (in
  at least a few places).

- `savepoint.txt` moved from ZODB's test directory a level up -- we
  follow.

- Make compatible with new zope.traversing and zope.location.

3.5.0 (2009-01-17)
------------------

- Adapted transaction book chapters for new transaction egg. The
  README.txt was removed and savepoint.txt was moved. Also add chapter
  about dooming transactions (doom.txt).

- Changed mailing list address to zope-dev at zope.org, because zope3-dev
  is retired now.

- Cleaned up dependencies.

3.4.3 (2007-11-10)
------------------

- Fix https://bugs.launchpad.net/zope3/+bug/161737: Misleading text in
  the interface viewer.

- Fix https://bugs.launchpad.net/zope3/+bug/161190: The zope3-dev
  mailinglist has been retired, point to zope-dev.


3.4.2 (2007-10-30)
------------------

- Avoid deprecation warnings for ``ZopeMessageFactory``.


3.4.1 (2007-10-23)
------------------

- Avoid deprecation warnings.


3.4.0 (2007-10-10)
------------------

- Improved package meta-data.

- Fixed the code to at least gracefully ignore unzipped eggs. Eventually we
  want to handle eggs well.


3.4.0a1 (2007-04-22)
--------------------

- Initial release independent of the main Zope tree.